...
    android:layout_gravity="center_horizontal"
    tools:context="com.ashiswin.kodyac.PhotoVerificationNRICActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nric_photo_instructions"
        android:text="Please click to add photo ID and \nperform photo verification"
        android:textColor="@color/colorIBMBlue"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp"
...
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@drawable/nricicon"
                        android:layout_gravity="center"/>
                    <TextView
                        android:id="@+id/txtCardNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextLight"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
...
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/startBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="0dp"
                android:background="@drawable/addicon"/>

            <Button
                android:id="@+id/btnPhotoVerification"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:enabled="true"
...
